--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,10 @@ img {
     width: 50%;
   }
 
+  .photo:nth-child(4), .photo:nth-child(5) {
+    width: 50%;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
