--- a/css/main.css
+++ b/css/main.css
@@ -54,10 +54,12 @@ img {
 
   .photo:nth-child(2), .photo:nth-child(3) {
     width: 50%;
+    display: inline-block;
   }
 
   .photo:nth-child(4), .photo:nth-child(5) {
     width: 50%;
+    display: inline-block;
   }
 
 }
