--- a/css/main.css
+++ b/css/main.css
@@ -55,6 +55,15 @@ img {
 
 @media only screen and (min-width: 38em) {
 
+  .photo:nth-child(5) {
+    display: none;
+  }
+
+  .photo:nth-child(2), .photo:nth-child(3) .photo:nth-child(4) {
+    width: 33.3333%;
+    display: inline-block;
+  }
+
 }
 
 @media only screen and (min-width: 60em) {
