--- a/css/main.css
+++ b/css/main.css
@@ -43,12 +43,12 @@ img {
 
     .photo:nth-child(2), .photo:nth-child(3) {
       width: 50%;
-      display: inline-block;
+      display: block;
     }
 
     .photo:nth-child(4), .photo:nth-child(5) {
       width: 50%;
-      display: inline-block;
+      display: block;
     }
 
 }
@@ -59,9 +59,9 @@ img {
     display: none;
   }
 
-  .photo:nth-child(2), .photo:nth-child(3) .photo:nth-child(4) {
+  .photo:nth-child(2), .photo:nth-child(3), .photo:nth-child(4) {
     width: 33.3333%;
-    display: inline-block;
+    display: block;
   }
 
 }
