--- a/css/main.css
+++ b/css/main.css
@@ -40,11 +40,10 @@ img {
 
 @media only screen and (min-width: 25em) {
 
-
-    .photo:nth-child(2), .photo:nth-child(3) {
-      width: 50%;
-      display: block;
-    }
+  .photo:nth-child(2), .photo:nth-child(3) {
+    width: 50%;
+    display: block;
+  }
 
     .photo:nth-child(4), .photo:nth-child(5) {
       width: 50%;
@@ -68,9 +67,17 @@ img {
 
 @media only screen and (min-width: 60em) {
 
+  .photo:nth-child(1) {
+    width: 66.6666%;
+  }
 
-}
+  .photo:nth-child(1), .photo:nth-child(2) {
+    display: inline-block;
+  }
 
-@media only screen and (min-width: 90em) {
+  .photo:nth-child(3), .photo:nth-child(4), .photo:nth-child(5) {
+    width: 33.3333%;
+    display: block;
+  }
 
 }
